--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -114,6 +114,10 @@
         &:hover {
             opacity: 0.8;
         }
+
+        @include mobile() {
+            display: none;
+        }
     }
 
     &__arrowLeft {
