--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -6,7 +6,7 @@
         font-size: 5rem;
 
         @include mobile() {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: 15px;
         }
     }
